Fixed the x overflow

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
+html {
+    overflow-x: hidden;
+}
+
 body {
     overflow: scroll;
+    overflow-x: hidden;
 
 }
 
